--- a/src/calculator/key/key.component.css
+++ b/src/calculator/key/key.component.css
@@ -8,6 +8,12 @@
     line-height: 100px;
     text-align: center;
     cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .key:hover {
