--- a/src/calculator/key/key.component.html
+++ b/src/calculator/key/key.component.html
@@ -1,3 +1,3 @@
-<div class="key {{ key.colspan > 1 ? 'colspan-' + key.colspan : '' }}" >
+<div class="key {{ key.colspan > 1 ? 'colspan-' + key.colspan : '' }}"  (click)="clicked($event)">
     {{ key.value }}
 </div>
