--- a/src/calculator/display/display.component.html
+++ b/src/calculator/display/display.component.html
@@ -1,3 +1,3 @@
 <div class="display">
-    <input type="text" class="display-content" disabled value="123" />
+    <input type="text" class="display-content" disabled value="{{ value }}" />
 </div>
