--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,4 +1,4 @@
 <div class="calculator-wrapper">
-    <display [value]="currentValue || leftOperand"></display>
+    <display [value]="calculator.currentValue || calculator.leftOperand"></display>
     <key *ngFor="let key of keys" [key]="key" (hitKey)="handleKeyAction($event)"></key> 
 </div>
